<resources>
    <string name="app_name">Alhambeers</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="btn_settings">Configurar</string>
    <string name="btn_twitter">Twitter</string>
    <string name="btn_sos">SOS</string>
    <string name="btn_phone">Telefono</string>
    <string name="btn_zone">Zona</string>
    <string name="btn_back">Atras</string>
    <string name="et_telf">Introduzca Teléfono de Contacto</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="btn_low">menos</string>
    <string name="btn_high">mas</string>
    <string name="btn_ok">OK</string>
    <string name="text_meters">metros</string>
    <string name="text_dist">XXX</string>
    <string name="toast_save">Guardado</string>

    <string name="info_paso1">Paso 1</string>
    <string name="info_paso2">Paso 2</string>
    <string name="info_paso3">Paso 3</string>
    <string name="info_paso4">Paso 4</string>
    <string name="bloquear">Bloquear</string>
    <string name="desbloquear">Desbloquear</string>
    <string name="save">Guardado</string>

    <string name="send_SOS">"SOS Enviado"</string>
    <string name="send_twitter">"Tweet Enviado"</string>
</resources>
