<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_dist"
            android:id="@+id/textViewDist"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_meters"
            android:id="@+id/textViewMeters"
            android:layout_weight="0.13"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="btnZona">

        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/btn_low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/yellow_500"
            android:text="@string/btn_low"
            android:onClick="btnSelecTelf" />

        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/lime_500"
            android:text="@string/btn_ok"
            android:onClick="btnBack" />

        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/btn_high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/yellow_500"
            android:text="@string/btn_high"
            android:onClick="btnBloquear" />

    </LinearLayout>

</LinearLayout>