<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etTelefono"
        android:numeric="integer"
        android:autoText="false"
        android:hint="@string/et_telf"
        android:maxLength="9"
        android:textSize="20dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/btTelfCancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#1E88E5"
            android:text="@string/cancelar"/>

        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/btTelfAceptar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#1E88E5"
            android:text="@string/aceptar"
            android:onClick="aniadirTelf" />
    </LinearLayout>
</LinearLayout>