<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".MainActivity">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/btn_sos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/red_500"
            android:text="@string/btn_sos"
            android:onClick="btnSos" />

        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/btn_twitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/blue_500"
            android:text="@string/btn_twitter"
            android:onClick="btnTwitter" />

        </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/btn_telefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/lime_500"
            android:text="@string/btn_phone"
            android:onClick="btnTelefono" />

        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/btn_config"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/grey_500"
            android:text="@string/btn_settings"
            android:onClick="btnConfig" />
        </LinearLayout>

</LinearLayout>
